namespace ARA.Player
{
    public class PlayerInputHolder
    {
    }
}
