namespace ARA.Presenter
{
    public interface IInputAnimator
    {
        void Initialize(int currentIndex);
        void PlayPreMoveAnimation(int index);
    }
}
